# rag

./: .gitignore  README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt  test
backend/data/: database.db
backend/data/sessions/: 459bdcc9-ca9a-4748-b4f0-f4570a17aef5.db  5e9af8a6-b7dd-4d5b-b343-4ee73275391e.db-shm  5e9af8a6-b7dd-4d5b-b343-4ee73275391e.db-wal  5ec6be41-eea8-4a36-ac05-01feed0d1b53.db-shm  5ec6be41-eea8-4a36-ac05-01feed0d1b53.db-wal  9a96fefc-2fcb-4afd-bd54-001db38cfb3b.db-shm  9a96fefc-2fcb-4afd-bd54-001db38cfb3b.db-wal  aefd66e3-9cf7-4729-a844-b488b9be2a9c.db-shm  aefd66e3-9cf7-4729-a844-b488b9be2a9c.db-wal  ba342504-d0ab-447a-8a12-38ba57e16a50.db-shm  ba342504-d0ab-447a-8a12-38ba57e16a50.db-wal  e48e8f6f-eec2-4088-bad3-61e60658b66f.db-shm  e48e8f6f-eec2-4088-bad3-61e60658b66f.db-wal  e83641fb-8e84-45ee-a3f3-850f0b1838a1.db
backend/data/vector_db/11303910-4487-4313-a4f5-781c31cfc7cb/: index.pkl
backend/data/vector_db/459bdcc9-ca9a-4748-b4f0-f4570a17aef5/: index.faiss  index.pkl
backend/data/vector_db/5e9af8a6-b7dd-4d5b-b343-4ee73275391e/: index.faiss  index.pkl
backend/data/vector_db/ba342504-d0ab-447a-8a12-38ba57e16a50/: index.pkl
backend/data/vector_db/e83641fb-8e84-45ee-a3f3-850f0b1838a1/: index.pkl
backend/db/: __init__.py  models.py
backend/routes/: chat_session.py
backend/services/: llm.py  llm.py.bak
chatbot/: main.ipynb  main.py  requirements.txt  test.py
chatbot/chroma_langchain_db/37be1aeb-a245-4bb9-b7e6-758d8597d9f5/: index_metadata.pickle
frontend/: package-lock.json  package.json  tailwind.config.ts
(+14 files in other folders)
