[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["deon-gracias <deongracias1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
unstructured = {extras = ["pdf"], version = "^0.16.9"}
faiss-cpu = "^1.9.0.post1"
fastapi = {extras = ["standard"], version = "^0.115.5"}
langchain = "^0.3.9"
langchain-community = "^0.3.9"
langchain-text-splitters = "^0.3.2"
langchain-ollama = "^0.2.1"
langgraph = "^0.2.53"
langgraph-checkpoint-sqlite = "^2.0.1"
sqlmodel = "^0.0.22"
pydantic = "^2.9.2"
poppler-utils = "^0.1.0"
langchain-unstructured = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
